--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2em;
     background-color: #4C4848;
     margin: 1em 0em;
     padding: 1em 2em;
@@ -40,21 +39,31 @@ header {
 
 .fa-bars {
     font-size: 1.5em;
+    
 }
 
-.header-link {
+.right-header div {
     display: none;
 }
 
+.header-link {
+    display: flex;
+    margin-left: 2em;
+}
+
 .main-area {
-    padding: 3em 2em;
+    padding: 10em 2em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .standings-title {
     display: flex;
     justify-content: center;
-    font-size: 1.5em;
-    padding: .25em 0em;
+    font-size: 1.75em;
+    padding-top: .75em;
     font-weight: 700;
 }
 
@@ -62,7 +71,7 @@ header {
     display: flex;
     justify-content: space-around;
     padding: .75em 0em .75em 0;
-    font-size: .75em;
+    font-size: 1.25em;
     width: 22em;
     
 }
@@ -77,14 +86,14 @@ header {
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 326px;
-    height: 250px;
+    width: 500px;
+    height: 400px;
 }
 
 .team-stats-cats {
     display: flex;
     padding: .5em 0;
-    font-size: .9em;
+    font-size: 1.25em;
     font-weight: 900;
 }
 
@@ -96,31 +105,32 @@ header {
 }
 
 .team-col {
-    margin-left: 2.75em;
+    margin-left: 1.5em;
+    margin-right: 1.75em;
 }
 
 .wins-col {
-    margin-left: 1.75em;
+    margin-left: .25em;
 }
 
 .ranks {
-    margin-left: .25em;
-    font-size: .9em;
+    margin-left: 0em;
+    font-size: 1.25em;
     font-weight: 900;
 }
 .teams {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 1em;
-    font-size: .9em;
+    margin-left: .5em;
+    font-size: 1.25em;
     font-weight: 900;
 }
 
 
 .wins {
     margin-left: 1.25em;
-    font-size: .9em;
+    font-size: 1.25em;
     font-weight: 900;
 }
 
@@ -130,7 +140,7 @@ header {
 
 .losses {
     margin-left: .75em;
-    font-size: .9em;
+    font-size: 1.25em;
     font-weight: 900;
 }
 
@@ -140,7 +150,7 @@ header {
 
 .pct {
     margin-left: .25em;
-    font-size: .9em;
+    font-size: 1.25em;
     font-weight: 900;
 }
 
@@ -153,7 +163,7 @@ header {
     flex-direction: column;
     align-items: center;
     margin-left: .75em;
-    font-size: .9em;
+    font-size: 1.25em;
     font-weight: 900;
 }
 
@@ -163,7 +173,7 @@ header {
 
 .conf {
     margin-left: .75em;
-    font-size: .9em;
+    font-size: 1.25em;
     font-weight: 900;
 }
 
@@ -173,7 +183,7 @@ header {
 
 .home {
     margin-left: .75em;
-    font-size: .9em;
+    font-size: 1.25em;
     font-weight: 900;
 }
 
@@ -190,20 +200,21 @@ header {
 }
 
 .away {
-    font-size: .9em;
+    font-size: 1.25em;
     margin-left: .75em;
     font-weight: 900;
 }
 
 .last-ten {
-    font-size: .9em;
+    font-size: 1.25em;
     margin-left: 1em;
     font-weight: 900;
 }
 
 .streak {
-    font-size: .9em;
+    font-size: 1.25em;
     margin-left: 1em;
+    margin-right: 1.25em;
     font-weight: 900;
 }
 
@@ -211,18 +222,17 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1em 0;
-    font-size: 1em;
+    margin: 2em 0;
+    font-size: 1.5em;
     
 }
 
 .gallery-div {
-    width: 326px;
-    height: 250px;
+    width: 500px;
+    height: 400px;
     background-image: url('./images/boston-mayor-fans-td-garden-fenway-park-through.webp');
-    background-size: 326px 250px;
+    background-size: 500px 400px;
     border-radius: 30px;
-    margin-top: 3em;
     display: flex;
     justify-content: center;
     font-weight: 900;
@@ -231,13 +241,13 @@ header {
 .inner-gal {
     display: flex;  
     align-items: center;
-    margin-top: 9em;
+    margin-top: 16em;
 }
 
 .gallery-button {
     background-color: #FF2F1B;
     width: auto;
-    font-size: 1.25em;
+    font-size: 1.75em;
     font-weight: 900;
     width: 6em;
     display: flex;
@@ -250,7 +260,7 @@ header {
 
 .left-arrow-gallery {
     display: flex;
-    font-size: 2.25em;
+    font-size: 3em;
     background-color: black;
     color: #FF2F1B;
     border-radius: 1.125em;
@@ -259,7 +269,7 @@ header {
 
 .right-arrow-gallery {
     display: flex;
-    font-size: 2.25em;
+    font-size: 3em;
     background-color: black;
     color: #FF2F1B;
     border-radius: 1.125em;
@@ -269,13 +279,284 @@ header {
 footer {
     background-color: #4C4848;
     display: flex;
-    flex-direction: column;
-    font-size: .75em;
-    justify-content: center;
+    flex-direction: row;
+    font-size: 1em;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
     color: white;
     font-weight: 900;
-    padding: .5em 0;
+    padding: 1.25em 3em;
 }
 
+footer div {
+    width: 335px;
+}
+
+footer i {
+    font-size: 1.5em;
+    margin: 0 .25em;
+}
+
+
+
+@media  (max-width: 1200px) {
+    .fa-bars {
+        font-size: 1.5em;
+    }
+
+    .right-header div {
+        display: flex;
+    }
+    
+    .header-link {
+        display: none;
+    }
+    
+    .main-area {
+        padding: 3em 2em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .standings-title {
+        display: flex;
+        justify-content: center;
+        font-size: 1.5em;
+        padding: .25em 0em;
+        font-weight: 700;
+    }
+    
+    .conference-select {
+        display: flex;
+        justify-content: space-around;
+        padding: .75em 0em .75em 0;
+        font-size: .75em;
+        width: 22em;
+        
+    }
+    
+    .east-conf-select {
+        font-weight: 900;
+    }
+    
+    .standings-div {
+        background-color: #FF2F1B;
+        border-radius: 30px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 326px;
+        height: 250px;
+    }
+    
+    .team-stats-cats {
+        display: flex;
+        padding: .5em 0;
+        font-size: .9em;
+        font-weight: 900;
+    }
+    
+    .stats {
+        display: flex;
+        flex-direction: row;
+        font-size: .9em;
+        font-weight: 900;
+    }
+    
+    .team-col {
+        margin-left: 1.25em;
+        margin-right: 1.5em;
+    }
+    
+    .wins-col {
+        margin-left: 1em;
+    }
+    
+    .ranks {
+        margin-left: .25em;
+        font-size: .9em;
+        font-weight: 900;
+    }
+    .teams {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 1em;
+        font-size: .9em;
+        font-weight: 900;
+    }
+    
+    
+    .wins {
+        margin-left: 1.25em;
+        font-size: .9em;
+        font-weight: 900;
+    }
+    
+    .losses-col {
+        margin-left: 1em;
+    }
+    
+    .losses {
+        margin-left: .75em;
+        font-size: .9em;
+        font-weight: 900;
+    }
+    
+    .win-pct-col {
+        margin-left: 1em;
+    }
+    
+    .pct {
+        margin-left: .25em;
+        font-size: .9em;
+        font-weight: 900;
+    }
+    
+    .gb-col {
+        margin-left: 1em;
+    }
+    
+    .gb {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: .75em;
+        font-size: .9em;
+        font-weight: 900;
+    }
+    
+    .conf-record-col {
+        margin-left: .75em;
+    }
+    
+    .conf {
+        margin-left: .75em;
+        font-size: .9em;
+        font-weight: 900;
+    }
+    
+    .home-record-col {
+        margin-left: .75em;
+    }
+    
+    .home {
+        margin-left: .75em;
+        font-size: .9em;
+        font-weight: 900;
+        margin-right: 0;
+        width: 3em;
+    }
+    
+    .away-record-col {
+        margin-left: .5em;
+    }
+    
+    .last-ten-record-col {
+        margin-left: .75em;
+    }
+    
+    .win-streak-col {
+        margin-left: .5em;
+    }
+    
+    .away {
+        font-size: .9em;
+        margin-left: .75em;
+        font-weight: 900;
+        width: 3.5em;
+    }
+    
+    .last-ten {
+        font-size: .9em;
+        margin-left: .25em;
+        font-weight: 900;
+        width: 2em;
+    }
+    
+    .streak {
+        font-size: .9em;
+        margin-left: 1em;
+        font-weight: 900;
+    }
+    
+    .see-more-div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 1em 0;
+        font-size: 1em;
+        
+    }
+    
+    .gallery-div {
+        width: 326px;
+        height: 250px;
+        background-image: url('./images/boston-mayor-fans-td-garden-fenway-park-through.webp');
+        background-size: 326px 250px;
+        border-radius: 30px;
+        margin-top: 3em;
+        display: flex;
+        justify-content: center;
+        font-weight: 900;
+    }
+    
+    .inner-gal {
+        display: flex;  
+        align-items: center;
+        margin-top: 9em;
+    }
+    
+    .gallery-button {
+        background-color: #FF2F1B;
+        width: auto;
+        font-size: 1.25em;
+        font-weight: 900;
+        width: 6em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 1.75em;
+        border-radius: 2em;
+        margin: 0em 1em;
+    }
+    
+    .left-arrow-gallery {
+        display: flex;
+        font-size: 2.25em;
+        background-color: black;
+        color: #FF2F1B;
+        border-radius: 1.125em;
+        
+    }
+    
+    .right-arrow-gallery {
+        display: flex;
+        font-size: 2.25em;
+        background-color: black;
+        color: #FF2F1B;
+        border-radius: 1.125em;
+        
+    }
+    
+    footer {
+        background-color: #4C4848;
+        display: flex;
+        flex-direction: column;
+        font-size: .75em;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        color: white;
+        font-weight: 900;
+        padding: 1em 0;
+    }
+
+    footer i {
+        font-size: 1.25em;
+        padding: .5em 0;
+    }
+    
+}
