--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ header {
 
 }
 
+.mobile-links {
+    display: none;
+}
+
 .fa-basketball {
     font-size: 1.5em;
     margin-right: .75rem;
@@ -309,6 +313,26 @@ footer i {
         display: flex;
     }
     
+    header {
+        margin-bottom: 0;
+    }
+
+    .mobile-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 7em;
+        background-color: #4C4848;
+        width: 100%;
+        height: 10em;
+    }
+
+    .mobile-link {
+        margin: .25em;
+    }
+
     .header-link {
         display: none;
     }
