--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -63,6 +63,50 @@ header {
     font-weight: 700;
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.img-divs {
+    display: flex;
+    flex-direction: row;
+    padding: 1em;
+    justify-content: center;
+}
+
+.gal-img {    
+    width: 40%;
+    padding: 1em;
+    border-radius: 3em;
+}
+
+footer {
+    background-color: #4C4848;
+    display: flex;
+    flex-direction: row;
+    font-size: 1em;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-weight: 900;
+    padding: 1.25em 3em;
+    margin-top: 2em;
+}
+
+footer div {
+    width: 335px;
+}
+
+footer i {
+    font-size: 1.5em;
+    margin: 0 .25em;
+}
+
 .burger-menu :hover {
     cursor: pointer;
 }
@@ -84,7 +128,6 @@ header {
 }
 
 
-
 @media  (max-width: 1200px) {
     .fa-bars {
         font-size: 1.5em;
@@ -99,7 +142,7 @@ header {
     }
     
     header {
-        margin-bottom: 0;
+        margin-bottom: 3em;
     }
 
     .mobile-links {
@@ -124,6 +167,38 @@ header {
 
     .header-link {
         display: none;
+    }
+
+    .img-divs {
+        display: flex;
+        flex-direction:column;
+        padding: 0;
+        padding: 0em 2em;
+    }
+    .gal-img {
+        width: 100%;
+        padding: 0;
+        margin-bottom: 3em;
+        
+    }
+
+    footer {
+        background-color: #4C4848;
+        display: flex;
+        flex-direction: column;
+        font-size: .75em;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        color: white;
+        font-weight: 900;
+        padding: 1em 0;
+        margin-bottom: 2em;
+    }
+
+    footer i {
+        font-size: 1.25em;
+        padding: .5em 0;
     }
 
 }
