--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -102,9 +102,10 @@ footer div {
     width: 335px;
 }
 
-footer i {
+footer a {
     font-size: 1.5em;
     margin: 0 .25em;
+    color: white;
 }
 
 .burger-menu :hover {
@@ -196,9 +197,10 @@ footer i {
         margin-bottom: 2em;
     }
 
-    footer i {
+    footer a {
         font-size: 1.25em;
-        padding: .5em 0;
+        padding: .5em 0em;
+        color: white;
     }
 
 }
