--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header {
     padding: 10em 2em;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: top;
     justify-content: space-around;
 }
 
@@ -97,9 +97,11 @@ header {
     border-radius: 30px;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
+    padding-bottom: 1em;
     width: 500px;
-    height: 400px;
+    height: auto;
 }
 
 .team-stats-cats {
@@ -239,6 +241,60 @@ header {
     
 }
 
+.western-stats {
+    display: none;
+    flex-direction: row;
+    font-size: .9em;
+    font-weight: 900;
+}
+
+.eastern-see-more-stats {
+    display: none;
+    flex-direction: row;
+    font-size: .9em;
+    font-weight: 900;
+}
+
+.western-see-more-stats {
+    display: none;
+    flex-direction: row;
+    font-size: .9em;
+    font-weight: 900;
+}
+
+.eastern-see-more-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em 0;
+    font-size: 1.25em;
+}
+
+.western-see-more-div {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em 0;
+    font-size: 1.25em;
+    
+}
+
+.eastern-close-more-div {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em 0;
+    font-size: 1.25em;
+}
+
+.western-close-more-div {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em 0;
+    font-size: 1.25em;
+}
+
 .gallery-div {
     width: 500px;
     height: 400px;
@@ -350,6 +406,8 @@ footer a {
 .west-conf-select {
     cursor: pointer;
 }
+
+
 
 
 
@@ -581,7 +639,7 @@ footer a {
     
     .streak {
         font-size: .9em;
-        margin-left: 1em;
+        margin-left: .5em;
         font-weight: 900;
     }
     
