--- a/CSS/about.css
+++ b/CSS/about.css
@@ -165,6 +165,10 @@ footer a {
         padding: 1em 0;
     }
 
+    .middle-footer {
+        margin: .5em 0;
+    }
+
     footer a {
         font-size: 1.25em;
         padding: .5em 0em;
