--- a/CSS/nba-stats.css
+++ b/CSS/nba-stats.css
@@ -177,4 +177,43 @@ footer a {
         padding: .5em 0em;
         color: white;
     }
+
+    section {
+        display: flex;
+        flex-direction: column;
+        padding: 3em 2em;
+        align-items: center;
+    }
+
+    section h1 {
+        text-align: center;
+        color: #FF2F1B;
+        margin-bottom: 2em;
+    }
+
+    section div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #FF2F1B;
+        border-radius: 3em;
+        width: 100%;
+        margin: 2em 0;
+        padding: 1em 0;
+        max-width: 500px;
+    }
+
+    section div h2 {
+        color: black;
+        font-weight: 900;
+        margin: .5em 0;
+    }
+
+    section div p {
+        margin: .25em 0;
+    }
+
+    section div span {
+        font-weight: 900;
+    }
 }
